Kubernetes/working_solutions/AgroCRM-Suite-with-MariaDB/agrocrm-suite-with-mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrocrm-suite-with-mariadb
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrocrm-suite-with-mariadb
  template:
    metadata:
      labels:
        app: agrocrm-suite-with-mariadb
    spec:
      containers:
        - name: agrocrm-suite-with-mariadb
          image: bitnami/suitecrm
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /bitnami/suitecrm
              name: agrocrm-suite-with-mariadb-persistent-storage
      volumes:
        - name: agrocrm-suite-with-mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: agrocrm-suite-with-mariadb-pvc
